--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -90,7 +90,7 @@ button:hover {
     border-bottom: 2px solid @blue;
 }
 
-#network {
+#memory {
     color: @yellow;
     border-bottom: 2px solid @yellow;
 }
